DemoIstio/demo_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: demo
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  hostnames: ["demo.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /demo
    backendRefs:
    - name: demo-svc.demo.svc.cluster.local
      port: 8080
